--- a/src/app/dogs/dog/dog.component.html
+++ b/src/app/dogs/dog/dog.component.html
@@ -1,15 +1,34 @@
-<div>
-  <form #form="ngForm" (submit)="save()" novalidate>
-    <div class="form-group">
-      <label for="inputName" [class.is-invalid]="inputName.invalid">Name</label>
-      <input #inputName="ngModel"  type="text" name="inputName" class="form-control" required [(ngModel)]="_dog.name" [class.is-invalid]="inputName.invalid" id="inputName" placeholder="Name">
-    </div>
-    <div class="form-group">
-      <label for="inputAge">Age</label>
-      <input type="number" name="inputAge" [(ngModel)]="_dog.age" class="form-control" id="inputAge" placeholder="Age">
-    </div>
+<table class="table-sm">
+  <tr>
+    <td width="200px" align="center">
+      <div class="form-group">
+        <img [src]="image" class="rounded mx-auto d-block" width="200px" height="200px">
+      </div>
+    </td>
+    <td>
+      <div>
+          <form #form="ngForm" (submit)="save()" novalidate>
+            <div class="form-group">
+              <label for="inputName" [class.is-invalid]="inputName.invalid">Name</label>
+              <input #inputName="ngModel"  type="text" name="inputName" class="form-control" required [(ngModel)]="_dog.name" [class.is-invalid]="inputName.invalid" id="inputName" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="inputAge">Age</label>
+              <input type="number" name="inputAge" [(ngModel)]="_dog.age" class="form-control" id="inputAge" placeholder="Age">
+            </div>
+            <div class="form-group">
+              <label for="selectRazza">Breed</label>
+              <select class="form-control" name="breedsSelect" [(ngModel)]="breed" (change)="breedChanged()">
+                <option *ngFor="let breed of breeds">
+                  {{ breed }}
+                </option>
+            </select>
+            </div>
+            <button [disabled]="form.invalid" type="submit" class="btn btn-primary">SAVE</button>
+            <button type="button" class="btn btn-danger" (click)="cancel()">CANCEL</button>
+          </form>
+        </div>
+    </td>
+  </tr>
+</table>
 
-    <button [disabled]="form.invalid" type="submit" class="btn btn-primary">SAVE</button>
-    <button type="button" class="btn btn-danger" (click)="cancel()">CANCEL</button>
-  </form>
-</div>
