--- a/src/app/dogs/dog/dog.component.html
+++ b/src/app/dogs/dog/dog.component.html
@@ -2,7 +2,7 @@
   <tr>
     <td width="200px" align="center">
       <div class="form-group">
-        <img [src]="image" class="rounded mx-auto d-block" width="200px" height="200px">
+        <img [src]="image" class="rounded" style="background-position: center center;background-repeat: no-repeat;object-fit: cover;" width="200px" height="200px">
       </div>
     </td>
     <td>
