--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,13 @@
 <nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">DogApp</a>
+  <a class="navbar-brand" href="#">App</a>
+  <div class="" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="dogs">Dogs <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="maps">Maps</a>
+        </li>
+      </ul>
+    </div>
 </nav>
