--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item">
           <a class="nav-link" href="maps">Maps</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mathlab">Math Lab</a>
+        </li>
       </ul>
     </div>
 </nav>
